--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,39 @@
 body{
   background-color: white;
-  height: 1000vh;
+  height: 100vh;
   overflow-y: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.box{
+  padding: 1vw 2vw;
+  display: flex;
+  box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;
+  border-radius: 2vw;
+  width: 70%;
+  margin: 0 auto;
+  position: relative;
+}
+.Text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 5vw;
+}
+.Text h1{
+  font-size: 4vw;
+  margin: 1vw 0;
+}
+.Text p{
+  width: 70%;
+  font-size: 1.5vw;
+  color: gray;
+}
+.Model{
+  width: 70vw;
+  height: 70vw;
+  position: absolute;
+  top: -150%;
 }
